<resources>
    <string name="app_name">Week6LabCarRental</string>
    <string name="managerTitle">Car Rental - Manager Control Page :</string>
    <string name="btnCarAdd">Add</string>
    <string name="btnCarAllCar">ALL CAR</string>
    <string name="btnCarSearch">Search</string>
    <string name="btnCarUpdate">Update</string>
    <string name="btnCarDelete">Delete</string>

    <string name="textCarID">Car ID : </string>
    <string name="hintCarID">Enter the car ID here</string>
    <string name="textCarCategory">Category : </string>
    <string name="hintCarCategory">Select the car category here</string>
    <string name="textCarPricePerHour">Price per hour : </string>
    <string name="hintCarPricePerHour">Enter the hourly price here</string>
    <string name="textCarPricePerDay">Price per day : </string>
    <string name="hintCarPricePerDay">Enter the daily price here</string>
    <string name="textCarMaker">Maker : </string>
    <string name="hintCarMaker">Enter the car maker here</string>
    <string name="textCarModel">Model : </string>
    <string name="hintCarModel">Enter the model here</string>
    <string name="textCarColor">Color : </string>
    <string name="hintCarColor">Enter the color here</string>
    <string name="textCarAvailable">Available : </string>
    <string name="hintCarAvailable">Select true or false here</string>

    <string-array name="car_category_list">
        <item>Select the car category here</item>
        <item>SUV</item>
        <item>Hatchback</item>
        <item>Truck</item>
        <item>Van</item>
        <item>Sedan</item>
        <item>Sports Car</item>
    </string-array>

    <string-array name="car_color_list">
        <item>Select car color here</item>
        <item>Blue</item>
        <item>Red</item>
        <item>Green</item>
        <item>Black</item>
        <item>Gray</item>
    </string-array>

    <string-array name="car_num_pas_list">
        <item>Select passenger capacity</item>
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>


</resources>
